--- a/finalProject/src/view/DangNhap.form
+++ b/finalProject/src/view/DangNhap.form
@@ -50,10 +50,7 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="147" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="nutDangNhap" max="32767" attributes="0"/>
-                              <Component id="mesError" max="32767" attributes="0"/>
-                          </Group>
+                          <Component id="nutDangNhap" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="62" max="-2" attributes="0"/>
@@ -73,8 +70,12 @@
                               </Group>
                           </Group>
                       </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="-2" pref="131" max="-2" attributes="0"/>
+                          <Component id="mesError" min="-2" pref="178" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
-                  <EmptySpace pref="100" max="32767" attributes="0"/>
+                  <EmptySpace pref="72" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -114,14 +115,8 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="account">
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="accountActionPerformed"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="passwordField">
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="passwordFieldActionPerformed"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="nutDangNhap">
           <Properties>
