--- a/finalProject/src/view/ListPayment.form
+++ b/finalProject/src/view/ListPayment.form
@@ -100,6 +100,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="make payment"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="makepaymentActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
